2017-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.h,
	  src/SDCCast.c,
	  src/SDCCcse.c:
	  Fix bug #2593.
	* support/regression/tests/absolute.c,
	  support/regression/tests/bug-2304.c,
	  support/regression/tests/bug2686159.c,
	  support/regression/tests/bug3027957.c:
	  Fix bug #2584.
	* src/SDCCicode.c,
	  support/regression/tests/bug-2568.c:
	  Fix bug #2568.

2017-03-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (checkZero): fix bug #2586

2017-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2582.c:
	  Fix bug #2582.

2017-03-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y: fixed bug #2587
	* support/regression/tests/for.c: change to catch bug #2587
	* support/regression/tests/bug-2590.c: disable test on host

2017-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2376.c:
	  Fix bug #2376.

2017-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/bug-2590.c:
	  Fix bug #2590.

2017-02-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Omit some unnecessary register saving on wide shifts.

2017-02-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Optimize wide right shifts, part of RFE #524.
	* device/lib/rand.c,
	  support/regression/tests/rand.c:
	  Fix default seed.

2017-02-08 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/rand.c:
	  Replace LCG by xorshift for rand().
	* src/z80/gen.c:
	  Optimize wide left shifts, part of RFE #524.

2017-02-04 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/pic14/math.h,
	  device/include/pic16/math.h,
	  device/lib/pic14/libm/Makefile.am,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic16/libm/Makefile.am,
	  device/lib/pic16/libm/Makefile.in,
	  src/pic14/gen.c,
	  src/pic14/glue.c,
	  support/regression/compact-results.py,
	  support/regression/ports/pic14/support.c,