@@ -2377,7 +2377,12 @@ geniCodeAdd (operand * left, operand * right, RESULT_TYPE resultType, int lvl)
 
   /* if they are both literals then we know */
   if (IS_LITERAL (letype) && IS_LITERAL (retype) && left->isLiteral && right->isLiteral)
-    return operandFromValue (valPlus (valFromType (ltype), valMult (valFromType (rtype), valueFromLit (getSize (ltype->next)))));
+    {
+	  value *scaledRight = valFromType (rtype);
+	  if (IS_PTR (ltype))
+	    scaledRight = valMult (scaledRight, valueFromLit (getSize (ltype->next)));
+      return operandFromValue (valPlus (valFromType (ltype), scaledRight));
+    }
 
   ic = newiCode ('+', left, right);
 
